--- a/pages/main/style.css
+++ b/pages/main/style.css
@@ -169,22 +169,31 @@ margin-right: 95px;
 .flower1 {
     position: absolute;
     right: 0;
+    width: 200px;
     top: -100px;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
 .backstage__grid {
-    margin-top: 100px;
+    margin-top: 125px;
     display: grid;
-    grid-template-columns: 50% 465px;
-    gap: 87px;
+    grid-template-columns: 580px 465px;
+    gap: 82px;
 }
 .backstage__title {
+    margin: 0;
     font-weight: 400;
     font-size: 48px;
     line-height: 120%;    
 }
+.backstage_subtitle {
+    margin-top: 54px;
+    font-weight: 400;
+font-size: 24px;
+line-height: 120%;
+}
 .backstage__photo {
+    width: 580px;
     backdrop-filter: blur(2px);
 }
 
