--- a/pages/main/style.css
+++ b/pages/main/style.css
@@ -35,6 +35,7 @@ img {
 }
 
 .button {
+    display: block;
     cursor: pointer;
     text-align: center;
     text-transform: uppercase;
@@ -57,6 +58,21 @@ img {
 
 .button:disabled {
     background: #767474;
+}
+.title {
+    margin: 0;
+    font-weight: 400;
+    font-size: 46px;
+    line-height: 58px;
+    text-overflow: ellipsis;
+}
+
+.subtitle {
+    margin-top: 30px;
+    margin-bottom: 0;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 58px;
 }
 
 /* header starts*/
@@ -196,21 +212,6 @@ img {
     gap: 80px;
 }
 
-.backstage__title {
-    margin: 0;
-    font-weight: 400;
-    font-size: 46px;
-    line-height: 58px;
-    text-overflow: ellipsis;
-}
-
-.backstage_subtitle {
-    margin-top: 30px;
-    margin-bottom: 0;
-    font-weight: 400;
-    font-size: 24px;
-    line-height: 58px;
-}
 
 .backstage__text {
     line-height: 22px;
@@ -345,3 +346,83 @@ right: -1120px;
 }
 
 /* section pets ends*/
+
+/* section pick-and-feed starts*/
+
+.pick-and-feed {
+    padding-top: 70px;
+    padding-bottom: 70px;
+    background: linear-gradient(315.75deg, rgba(254, 210, 144, 0.7) 30.06%, #FEBDAB 100.95%, rgba(254, 210, 144, 0.7) 106.36%), linear-gradient(315.75deg, rgba(254, 189, 171, 0.74) 30.06%, rgba(243, 169, 248, 0.66) 50.74%, #E0D8F0 80.49%, #EAF7FE 127.9%, #EAF7FE 149.54%), linear-gradient(315.75deg, rgba(254, 189, 171, 0.74) 30.06%, rgba(243, 169, 248, 0.66) 50.74%, #E0D8F0 80.49%, #EAF7FE 127.9%, #EAF7FE 149.54%);
+}
+.pick-and-feed__container{
+    padding: 35px 90px;
+    background: rgba(253, 253, 255, 0.52);
+backdrop-filter: blur(2px);
+border-radius: 20px;
+color: #333B41;
+}
+.pick-and-feed__title{
+    margin-bottom: 30px;
+    text-align: center;
+    color: #FE9013;
+}
+.pick-and-feed__small-title {
+    font-size: 36px;
+    text-align: center;
+    margin-bottom: 40px;
+}
+.pick-and-feed__subtitle {
+    margin-top: 0;
+    margin-bottom: 36px;
+    line-height: 29px;
+}
+.text__bold {
+    font-weight: 600;
+}
+.link__underline {
+border-bottom: 2px solid #FE9013;
+}
+.how-it-works__container {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    justify-items: center;
+    max-width: 770px;
+    margin: 0 auto 30px auto;
+}
+.item__photo {
+    padding: 50px 30px;
+    width: 168px;
+height: 168px;
+background: #FFFFFF no-repeat;
+border-radius: 5px;
+border: 1px solid #F9804B;
+}
+.item__icon {
+    max-height: 85px;
+}
+.container__arrow {
+    width: 69px;
+height: 35.08px;
+align-self: center;
+}
+.container__text {
+    justify-self: start;
+    display: block;
+    max-width: 170px;
+ }
+ .container__text-left {
+    grid-column: 1 / 2;
+ }
+ .container__text-center {
+    grid-column: 3 / 4;
+ }
+ .container__text-right {
+    grid-column: 5/6;
+ }
+ .pick-and-feed__button {
+    margin: 0 auto 10px auto;
+    padding: 16px 60px;
+}
+
+/* section pick-and-feed ends*/
+
