--- a/pages/main/style.css
+++ b/pages/main/style.css
@@ -1,3 +1,49 @@
+
+h2,
+h3,
+.subtitle {
+    margin: 0;
+    font-weight: 400;
+}
+
+button, h5  {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 22px;
+    text-transform: uppercase;
+}
+
+h1 {
+    margin: 0;
+    font-weight: 700;
+    font-size: 114px;
+    line-height: 91px;
+    text-transform: uppercase;
+}
+
+h2 {
+    font-size: 48px;
+    line-height: 58px;
+}
+
+h3 {
+    font-size: 36px;
+    line-height: 47px;
+}
+
+.subtitle {
+    font-size: 24px;
+    line-height: 120%;
+}
+
+.small-paragraph {
+    margin: 0;
+    font-weight: 300;
+    font-size: 15px;
+    line-height: 18px;
+    color:#000000;
+}
+
 html {
     box-sizing: border-box;
     scroll-behavior: smooth;
@@ -19,7 +65,10 @@ a {
 }
 
 body {
-    font-family: 'Roboto';
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 22px;
     color: #ffffff;
 }
 
@@ -34,36 +83,31 @@ img {
     padding: 0 20px;
 }
 
-.button-round {
-    width: 298px;
-    height: 54px;
+.button {
+    padding: 0;
+    width: 284px;
+    height: 53px;
     display: block;
     cursor: pointer;
     text-align: center;
-    text-transform: uppercase;
     background: #F9804B;
-    border-radius: 25px;
     border: none;
     color: #ffffff;
 }
+
+.button-round {
+    border-radius: 25px;
+}
+
 .button-box {
-    width: 298px;
-    height: 54px;
-    display: block;
-    cursor: pointer;
-    text-align: center;
-    text-transform: uppercase;
-    background: #F9804B;
     border-radius: 5px;
-    border: none;
-    color: #ffffff;
 }
 
 .button-round:hover,
 .button-box:hover {
     background-color: #E47209;
     transition: 0.2s;
-}
+}rgb(81, 42, 42)
 
 .button-round:active,
 .button-box:active {
@@ -75,26 +119,13 @@ img {
 .button-box:disabled {
     background: #767474;
 }
-.title {
-    margin: 0;
-    font-weight: 400;
-    font-size: 46px;
-    line-height: 58px;
-    text-overflow: ellipsis;
-}
 
-.subtitle {
-    margin: 0;
-    font-weight: 400;
-    font-size: 24px;
-    line-height: 58px;
-}
 
 /* header starts*/
 
 .header {
     background-color: #000000;
-    padding: 12px 0;
+    padding: 11px 0;
 }
 
 .header__nav {
@@ -104,7 +135,8 @@ img {
 }
 
 .header__left,
-.header__right, logo__container {
+.header__right,
+logo__container {
     display: flex;
     align-items: center;
 }
@@ -114,17 +146,14 @@ img {
     position: relative;
     padding: 1px;
     border: 1px solid #FFFFFF;
-    border-radius: 2px;  
+    border-radius: 2px;
 }
 
 .logo {
     margin: 0;
     text-align: center;
-    font-weight: 400;
     font-size: 19px;
-    line-height: 23px;
 }
-
 
 .logo-bamboo {
     position: absolute;
@@ -135,10 +164,13 @@ img {
 
 .navigation__list {
     display: inline-flex;
+    padding: 0;
+    margin-left: 63px;
 }
 
 .active,
-.navigation__link:hover {
+.navigation__link:hover,
+.credit:hover {
     color: #F9804B;
     transition: 0.2s;
 }
@@ -154,13 +186,13 @@ img {
 
 .watch {
     position: relative;
-    padding-bottom: 97px;
+    padding-bottom: 94px;
     background: url('../../assets/images/panda-background.png') no-repeat;
     background-size: 100%;
 }
 
 .watch__circle-container {
-    margin-bottom: 80px;
+    margin-bottom: 78px;
     width: 100%;
     height: auto;
 }
@@ -178,17 +210,17 @@ img {
 
 .watch__text {
     position: relative;
-    top: 72px;
-    left: 76px;
+    top: 67px;
+    left: 75px;
     display: block;
-    font-weight: 700;
-    font-size: 103px;
-    line-height: 80px;
-    text-transform: uppercase;
     color: #ffffff;
     word-spacing: 9999999px;
     margin: 0;
     text-align: center;
+    font-weight: 700;
+    text-transform: uppercase;
+    font-size: 93px;
+    line-height: 77px;
 }
 
 .color {
@@ -214,9 +246,10 @@ img {
 
 .flower1 {
     position: absolute;
+    z-index: -100;
     right: 0;
     width: 200px;
-    top: -100px;
+    top: -110px;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
@@ -226,12 +259,6 @@ img {
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(1, 400px);
     gap: 80px;
-}
-
-
-.backstage__text {
-    line-height: 22px;
-    font-size: 14px;
 }
 
 .backstage__photo {
@@ -246,11 +273,11 @@ img {
 .pets {
     position: relative;
 }
+
 .arrow-left,
-.arrow-right 
-{
+.arrow-right {
     position: absolute;
-        top: 40%;
+    top: 40%;
 }
 
 .arrow__button-left {
@@ -260,7 +287,7 @@ img {
 
 .arrow__button-right {
     position: relative;
-right: -1120px;
+    right: -1120px;
 }
 
 .arrow__button-left,
@@ -290,8 +317,8 @@ right: -1120px;
 .pets__grid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(2, 406px);
-    gap: 20px 30px;
+    grid-template-rows: repeat(2, 408px);
+    gap: 18px 30px;
     margin-bottom: 70px;
 }
 
@@ -312,11 +339,7 @@ right: -1120px;
 
 .pets__item-title {
     color: #000000;
-    text-transform: uppercase;
     margin: 0;
-    font-weight: 600;
-    font-size: 16px;
-    line-height: 140%;
 }
 
 .pets__item-text {
@@ -342,18 +365,19 @@ right: -1120px;
     display: block;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 100px;
-    padding: 16px 55px;
+    margin-bottom: 96px;
 }
 
 .flower2 {
+    z-index: -100;
     position: absolute;
     left: 0;
     bottom: -100px;
-    width: 250px;
+    width: 274px;
 }
 
 .flower3 {
+    z-index: -100;
     position: absolute;
     right: 0;
     bottom: -100px;
@@ -366,76 +390,89 @@ right: -1120px;
 /* section pick-and-feed starts*/
 
 .pick-and-feed {
-    padding-top: 70px;
-    padding-bottom: 70px;
+    padding-top: 66px;
+    padding-bottom: 85px;
     background: linear-gradient(315.75deg, rgba(254, 210, 144, 0.7) 30.06%, #FEBDAB 100.95%, rgba(254, 210, 144, 0.7) 106.36%), linear-gradient(315.75deg, rgba(254, 189, 171, 0.74) 30.06%, rgba(243, 169, 248, 0.66) 50.74%, #E0D8F0 80.49%, #EAF7FE 127.9%, #EAF7FE 149.54%), linear-gradient(315.75deg, rgba(254, 189, 171, 0.74) 30.06%, rgba(243, 169, 248, 0.66) 50.74%, #E0D8F0 80.49%, #EAF7FE 127.9%, #EAF7FE 149.54%);
 }
-.pick-and-feed__container{
+
+.pick-and-feed__container {
     padding: 35px 90px;
     background: rgba(253, 253, 255, 0.52);
-backdrop-filter: blur(2px);
-border-radius: 20px;
-color: #333B41;
+    backdrop-filter: blur(2px);
+    border-radius: 20px;
+    color: #333B41;
 }
-.pick-and-feed__title{
+
+.pick-and-feed__title {
     margin-bottom: 30px;
     text-align: center;
     color: #FE9013;
 }
+
 .pick-and-feed__small-title {
-    font-size: 36px;
     text-align: center;
     margin-bottom: 40px;
 }
+
 .pick-and-feed__subtitle {
     margin-top: 0;
     margin-bottom: 36px;
-    line-height: 29px;
 }
-.text__bold {
-    font-weight: 600;
+.pick-and-feed__bold-text {
+    font-weight: 500;
+font-size: 16px;
 }
+
 .link__underline {
-border-bottom: 2px solid #FE9013;
+    border-bottom: 2px solid #FE9013;
 }
+
 .how-it-works__container {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     justify-items: center;
-    max-width: 770px;
-    margin: 0 auto 30px auto;
+    max-width: 740px;
+    margin: 0 auto 40px auto;
 }
+
 .item__photo {
     padding: 50px 30px;
-    width: 168px;
-height: 168px;
-background: #FFFFFF no-repeat;
-border-radius: 5px;
-border: 1px solid #F9804B;
+    width: 160px;
+    height: 160px;
+    background: #FFFFFF no-repeat;
+    border-radius: 5px;
+    border: 1px solid #F9804B;
 }
+
 .item__icon {
     max-height: 85px;
 }
+
 .container__arrow {
     width: 69px;
-height: 35.08px;
-align-self: center;
+    height: 35.08px;
+    align-self: center;
 }
+
 .container__text {
     justify-self: start;
     display: block;
     max-width: 170px;
- }
- .container__text-left {
+}
+
+.container__text-left {
     grid-column: 1 / 2;
- }
- .container__text-center {
+}
+
+.container__text-center {
     grid-column: 3 / 4;
- }
- .container__text-right {
+}
+
+.container__text-right {
     grid-column: 5/6;
- }
- .pick-and-feed__button {
+}
+
+.pick-and-feed__button {
     margin: 0 auto 10px auto;
     padding: 16px 60px;
 }
@@ -449,10 +486,10 @@ align-self: center;
     color: #000000;
     position: relative;
 }
+
 .testimonials__small-title {
-font-size: 36px;
-margin-bottom: 50px;
-text-align: center;
+    margin-bottom: 50px;
+    text-align: center;
 }
 
 .testimonials__container {
@@ -461,77 +498,88 @@ text-align: center;
     gap: 30px;
     margin-bottom: 22px;
 }
+
 .testimonials__item {
     border-radius: 20px;
     background: #F1F3F2;
     border: 2px solid pink;
-    padding: 15px 15px 0 15px;
+    padding: 15px 16px 19px 13px;
 }
+
 .testimonials__info {
     display: grid;
     grid-template-columns: 40px auto;
     gap: 5px;
 }
+
 .testimonials__info p {
     display: block;
     margin: 0;
 }
+
 .testimonial__info-time {
     font-style: oblique;
 }
-.testimonial__info-location + .testimonial__info-time {
+
+.testimonial__info-location+.testimonial__info-time {
     margin: 0 5px;
 }
+
 .author__pic {
     width: 35px;
     height: 35px;
 }
-.testimonial__location-time{
+
+.testimonial__location-time {
     display: flex;
-    flex-direction:row;
+    flex-direction: row;
     color: #BDBDBD;
 }
+
 .testimonial__text {
     white-space: pre-line;
     word-wrap: break-word;
-        font-weight: 300;
-font-size: 15px;
-line-height: 18px;
-color: #767474;
+    color: #767474;
 }
+
 .scrol {
     width: 600px;
     height: 6px;
     appearance: none;
     display: block;
-    margin: 0 auto 30px auto ;
+    margin: 0 auto 30px auto;
 }
+
 input[type=range]::-webkit-slider-runnable-track {
-        cursor: pointer;
+    cursor: pointer;
     border-radius: 6px/100%;
     border: 1px solid pink;
-    background-color:  #F5F7F6;
-  }
-  input[type=range]::-webkit-slider-thumb {
+    background-color: #F5F7F6;
+}
+
+input[type=range]::-webkit-slider-thumb {
     background: #FE9013;
     border-radius: 6px/100%;
     cursor: pointer;
-    width:115px;
+    width: 115px;
     height: 6px;
     -webkit-appearance: none;
     margin-top: -1px;
-  }
-  .testimonials__button {
+}
+
+.testimonials__button {
     margin-bottom: 180px;
-  }
-  .flower4 {
+}
+
+.flower4 {
     z-index: -100;
     display: block;
     position: absolute;
     right: 0;
     bottom: -300px;
     width: 250px;
-  }
+}
+
 /* section testimonials ends*/
 
 /* footer starts*/
@@ -540,15 +588,17 @@ input[type=range]::-webkit-slider-runnable-track {
     background-color: #111115;
     padding: 40px 0;
 }
+
 .footer__top {
     display: flex;
     justify-content: space-between;
     margin-bottom: 36px;
 }
+
 .footer__subtitle {
-line-height: 29px;
-margin-bottom: 14px;
+    margin-bottom: 14px;
 }
+
 #email {
     background: #111115;
     color: #BDBDBD;
@@ -556,56 +606,65 @@ margin-bottom: 14px;
     border-radius: 2px;
     padding: 10px;
 }
+
 #submit {
     border: 1px solid #333B41;
     padding: 10px 40px;
-border-radius: 5px;
-margin-left: 10px;
-cursor: pointer;
+    border-radius: 5px;
+    margin-left: 10px;
+    cursor: pointer;
 }
+
 #submit:active {
     color: #4B9200;
     border: 1px solid #4B9200;
 }
+
 #submit:invalid {
     color: #D31414;
     border: 1px solid #D31414;
 }
+
 .footer__button {
     margin-bottom: 50px;
 }
+
 .networks__list {
     padding: 0;
 }
+
 .network__icon {
     display: inline-block;
     background: rgba(196, 196, 196, 0.5);
-    width: 26px; 
+    width: 26px;
     height: 26px;
     border-radius: 50%;
     padding: 5px;
     text-align: center;
 }
+
 .network__pic {
-max-height: 16px;
+    max-height: 16px;
 }
+
 .networks__item {
     margin-bottom: 10px;
 }
+
 .network__text {
-    font-size: 22px;
     display: inline-block;
     margin: 0 0 12px 0;
 }
+
 .footer__bottom {
     display: flex;
     justify-content: space-between;
     align-items: end;
 }
+
 .footer__info {
     font-weight: 100;
     font-size: 16px;
-line-height: 21px;
 }
-/* footer ends*/
 
+/* footer ends*/
