--- a/pages/main/style.css
+++ b/pages/main/style.css
@@ -1,4 +1,3 @@
-
 h2,
 h3,
 .subtitle {
@@ -6,7 +5,8 @@ h3,
     font-weight: 400;
 }
 
-button, h5  {
+button,
+h5 {
     font-weight: 500;
     font-size: 16px;
     line-height: 22px;
@@ -41,7 +41,7 @@ h3 {
     font-weight: 300;
     font-size: 15px;
     line-height: 18px;
-    color:#000000;
+    color: #000000;
 }
 
 html {
@@ -107,9 +107,9 @@ img {
 .button-box:hover {
     background-color: #E47209;
     transition: 0.2s;
-}rgb(81, 42, 42)
+}
 
-.button-round:active,
+rgb(81, 42, 42) .button-round:active,
 .button-box:active {
     background: #4B9200;
     transition: 0.2s linear;
@@ -418,9 +418,10 @@ logo__container {
     margin-top: 0;
     margin-bottom: 36px;
 }
+
 .pick-and-feed__bold-text {
     font-weight: 500;
-font-size: 16px;
+    font-size: 16px;
 }
 
 .link__underline {
@@ -487,6 +488,11 @@ font-size: 16px;
     position: relative;
 }
 
+.testimonial__text {
+    white-space: pre-line;
+    word-wrap: break-word;
+}
+
 .testimonials__small-title {
     margin-bottom: 50px;
     text-align: center;
@@ -503,13 +509,14 @@ font-size: 16px;
     border-radius: 20px;
     background: #F1F3F2;
     border: 2px solid pink;
-    padding: 15px 16px 19px 13px;
+    padding: 11px 16px 19px 13px;
 }
 
 .testimonials__info {
     display: grid;
     grid-template-columns: 40px auto;
     gap: 5px;
+    margin-bottom: 10px;
 }
 
 .testimonials__info p {
@@ -568,7 +575,7 @@ input[type=range]::-webkit-slider-thumb {
 }
 
 .testimonials__button {
-    margin-bottom: 180px;
+    margin-bottom: 170px;
 }
 
 .flower4 {
@@ -592,11 +599,16 @@ input[type=range]::-webkit-slider-thumb {
 .footer__top {
     display: flex;
     justify-content: space-between;
-    margin-bottom: 36px;
+    margin-bottom: 30px;
 }
 
 .footer__subtitle {
     margin-bottom: 14px;
+}
+.footer__text {
+    color: #ffffff;
+    margin: 0;
+    line-height: 21px;
 }
 
 #email {
@@ -609,7 +621,7 @@ input[type=range]::-webkit-slider-thumb {
 
 #submit {
     border: 1px solid #333B41;
-    padding: 10px 40px;
+    padding: 10px 34px;
     border-radius: 5px;
     margin-left: 10px;
     cursor: pointer;
@@ -626,7 +638,7 @@ input[type=range]::-webkit-slider-thumb {
 }
 
 .footer__button {
-    margin-bottom: 50px;
+    margin-bottom: 26px;
 }
 
 .networks__list {
@@ -647,13 +659,10 @@ input[type=range]::-webkit-slider-thumb {
     max-height: 16px;
 }
 
-.networks__item {
-    margin-bottom: 10px;
-}
 
 .network__text {
     display: inline-block;
-    margin: 0 0 12px 0;
+    margin: 0 0 6px 4px;
 }
 
 .footer__bottom {
