add adaptivity to donate.html

--- a/pages/donate/style.css
+++ b/pages/donate/style.css
@@ -32,7 +32,7 @@ h3 {
 }
 
 .subtitle {
-    font-size: 24px;
+    font-size: 29px;
     line-height: 120%;
 }
 
@@ -47,6 +47,7 @@ h3 {
 html {
     box-sizing: border-box;
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 
 *,
@@ -70,11 +71,15 @@ body {
     font-size: 16px;
     line-height: 22px;
     color: #ffffff;
+    overflow-x: hidden;
 }
 
 img {
     height: auto;
     width: 100%;
+}
+.burger {
+    display: none;
 }
 
 .wrapper {
@@ -84,6 +89,7 @@ img {
 }
 
 .button {
+    margin: 0 auto;
     padding: 0;
     width: 284px;
     height: 53px;
@@ -120,7 +126,6 @@ img {
     background: #767474;
 }
 
-
 /* header starts*/
 
 .header {
@@ -142,7 +147,7 @@ logo__container {
 }
 
 .logo__container {
-    max-height: 52px;
+    max-height: 38px;
     position: relative;
     padding: 1px;
     border: 1px solid #FFFFFF;
@@ -153,6 +158,7 @@ logo__container {
     margin: 0;
     text-align: center;
     font-size: 19px;
+    line-height: 15px;
 }
 
 .logo-bamboo {
@@ -187,7 +193,7 @@ logo__container {
 .watch {
     position: relative;
     background: url('../../assets/images/panda.png') no-repeat;
-    height: 365px;
+    height: 315px;
     object-fit: contain;
 }
 
@@ -283,6 +289,7 @@ logo__container {
     display: block;
     background-color: #404950;
     direction: rtl;
+    cursor: pointer;
 } 
 
     .scrol:after {
@@ -435,7 +442,6 @@ padding: 16px 9px;
 .footer__subtitle {
     margin-bottom: 14px;
 }
-
 .footer__text {
     color: #ffffff;
     margin: 0;
@@ -473,6 +479,8 @@ padding: 16px 9px;
 }
 
 .networks__list {
+    display: flex;
+    flex-direction: column;
     padding: 0;
 }
 
@@ -508,3 +516,323 @@ padding: 16px 9px;
 }
 
 /* footer ends*/
+
+
+@media (max-width: 1000px) {
+    .navigation__item+.navigation__item {
+        margin-left: 30px;
+    }
+    .pick__subtitle {
+        font-size: 24px;
+    }
+    .scrol {
+        width: 550px;    
+    } 
+    .amount__title {
+        text-align: center;
+    }
+    .animal-amount__text p{
+        text-align: center;
+    }
+        .scrol:after {
+            left: 31px;
+        box-shadow:
+        80px 0 0 #ffee2e,
+        160px 0 0 #ffee2e,
+        240px 0 0 #ffee2e,
+        320px 0 0 #ffee2e,
+        400px 0 0 #ffee2e,
+        479px 0 0 #ffee2e;
+                }
+                .range__values {
+                    font-size: 20px;
+                }
+    .range__value + .range__value {
+        margin-left: 40px;
+    }
+    .pick-and-feed {
+        padding-bottom: 100px;
+    }
+.footer__button {
+    margin-left: 0;
+}
+.networks__list {
+    margin-bottom: 0;
+}
+.navigation__list {
+    margin-left: 36px;
+}
+.networks__item{
+    display: flex;
+    min-width: 108px;
+}
+.footer__info {
+    text-align: center;
+}
+.navigation__list-footer {
+    margin-bottom: 0;
+}
+.navigation__item-footer + .navigation__item-footer {
+    margin-left: 17px;
+}
+.footer__info{
+    margin-left: 5px;
+}
+
+}
+@media  (max-width: 640px) {
+    h2 {
+        font-size: 42px;
+        line-height: 50px;
+    }
+    .subtitle {
+        font-size: 22px;
+        line-height: 26px;
+    }
+    .small-paragraph {
+        font-size: 12px;
+        line-height: 14px;
+    }
+    .wrapper {
+        max-width: 600px;
+    }
+    .header {
+        padding: 0 2.5px;
+    }
+.credit {
+    display: none;
+}
+.logo {
+    font-size: 13px;
+}
+.logo-bamboo {
+    left: -17px;
+}
+.logo__container {
+    border: none;
+}
+.burger {
+    display: block;
+}
+.burger__line::after {
+    display: block;
+    content:'';
+    width: 18px;
+    border: .5px solid #ffffff;
+    border-radius: 2px;
+    margin-bottom: 1.5px;
+}
+.close .burger__line {
+    display: none;
+}
+.close::before,
+.close::after {
+    content: '';
+    display: block;
+    width: 18px;
+    height: 2px;
+    background: #ffffff;
+}
+.close::before {
+    transform: rotate(45deg);
+    position: relative;
+    top: 1px;
+}
+
+.close::after {
+    transform: rotate(-45deg);
+}
+.menu__mobile {
+    padding: 20px;
+    background-color: #ffffff;
+    position: absolute;
+    z-index: 2000;
+    width: 100%;
+    margin: 0 0 0 auto;
+    border: 0.8px solid #FE9013;
+    border-radius: 2px;
+}
+.navigation__list-mobile {
+    display: flex;
+    flex-direction: column;
+}
+.navigation__item + .navigation__item {
+    margin-left: 0;
+    margin-bottom: 4px;
+}
+.navigation-desktop {
+    color: black;
+}
+.watch {
+    padding-bottom: 23px;
+    background: url('../../assets/images/panda-background-mobile_donation.png');
+    background-size: cover;
+    margin-bottom: 0;
+    height: 200px;
+}
+.pick-and-feed {
+    padding-top: 25px;
+}
+.pick-and-feed__title {
+    margin-bottom: 25px;
+}
+.pick-and-feed__text{
+    margin-bottom: 25px;
+}
+.pick__subtitle {
+    margin-bottom: 0;
+}
+.pick__container {
+    padding: 30px 25px;
+}
+.big-number {
+    line-height: unset;
+    font-size: 46px;
+}
+.animal-amount__text p {
+    line-height: 18px;
+    margin-right: 8px;
+}
+.animal-amount__photo {
+    width: 180px;
+    margin-left: 2%;
+}
+.scrol {
+    width: 281px;
+}
+.scrol:after {
+    left: 30px;
+box-shadow:
+54px 0 0 #ffee2e,
+106px 0 0 #ffee2e,
+158px 0 0 #ffee2e,
+212px 0 0 #ffee2e;
+        }
+        .range__values {
+            font-size: 16px;
+        }
+.range__value + .range__value {
+margin-left: 15px;
+}
+.amount__input{
+width: 240px;
+}
+.pick__button {
+    width: 100%;
+}
+ .footer__subtitle, .footer__container, .network__text {
+        display: none;
+    }
+    .footer {
+        position: relative;
+    }
+    .footer__button{
+        width: 250px;
+    }
+    .networks {
+        position: absolute;
+        top: 0;
+        right: 20px;
+    }
+    .networks__item{
+        min-width: 0;
+    }
+    .networks__list {
+        margin-bottom: 0;
+    }
+    .navigation__list {
+margin: 0;
+    }
+    .footer__text{
+        font-size: 12px;
+    }
+    .navigation__item-footer +.navigation__item-footer {
+        margin-left: 10px;
+    }
+.hidden{
+    display: none;
+}
+
+ 
+}
+@media  (max-width: 320px) {
+h2, h3 {
+    font-size: 24px;
+    line-height: 29px;
+}
+
+.subtitle {
+    font-size: 24px;
+    line-height: 22px;
+}
+    .wrapper {
+        max-width: 300px;
+        padding: 0 10px;
+    }
+.header {
+    padding: 3px 0;
+}
+.logo__container {
+    border: none;
+}
+.navigation-desktop {
+    color: black;
+}
+.pick__container {
+    padding: 30px 3px;
+}
+.pick__subtitle {
+    font-size: 16px;
+}
+.animal-amount__photo {
+    width: 150px;
+}
+p.animal-amount__text {
+    margin-right: 0;
+    font-size: px;
+}
+.footer {
+    display: flex;
+    justify-content: center;
+}
+.footer__logo {
+    font-size: 20px;
+}
+.footer__bottom {
+    flex-direction: column;
+align-items: center;
+}
+.footer__button {
+    margin-bottom: 0;
+}
+.networks {
+    position: relative;
+    margin: 0 auto 10px auto;
+        right: 0;
+}
+.networks__list {
+    flex-direction: row;
+}
+.networks__item + .networks__item  {
+    margin-left: 30px;
+}
+.network__text {
+    display: none;
+}
+.navigation__list-footer {
+    position: absolute;
+    bottom: 30px;
+    left: 20px;
+    margin: 0 auto;
+}
+.navigation__item-footer+.navigation__item-footer {
+ margin-left: 30px; 
+}
+.footer__info {
+    margin-bottom: 40px;
+}
+.hidden{
+    display: none;
+}
+}
+
